--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           eval "$(conda shell.bash hook)"
           conda activate $PWD/.venv
           source ~/.poetry/env
-          find src -type f -name '*.py' -exec sed -i s/# MAGIC $/# MAGIC/g {} \;
+          find src -type f -name '*.py' -exec sed -i 's/# MAGIC $/# MAGIC/g' {} \;
           poe pylint
 
       - name: check displays
