--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,20 @@ jobs:
           source ~/.poetry/env
           find src -type f -name '*.py' -exec sed -i 's/# MAGIC $/# MAGIC/g' {} \;
           poe pylint
+          
+      - name: run tests
+        if: ${{ inputs.run_tests }}
+        run: |
+          eval "$(conda shell.bash hook)"
+          conda activate $PWD/.venv
+          
+          export SPARK_HOME=$(python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])')/pyspark
+          export PYSPARK_PYTHON=$PWD/.venv/bin/python
+          export PYSPARK_DRIVER_PYTHON=$PWD/.venv/bin/python
+          
+          chmod +x run_tests.sh
+          chmod +x .venv/ -R
+          ./run_tests.sh
 
       - name: check displays
         if: ${{ inputs.check_displays }}
