Add inputs run_tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ on:
         type: boolean
         required: false
         default: false
+      run_tests:
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   build:
